src/Gubbins/Parser/Gubbins.java
/* Gubbins.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. Gubbins.java */
package Gubbins.Parser;
import ast.*;
import java.util.LinkedList;
import java.util.List;

public class Gubbins/*@bgen(jjtree)*/implements GubbinsTreeConstants, GubbinsConstants {/*@bgen(jjtree)*/
  protected static JJTGubbinsState jjtree = new JJTGubbinsState();

/** Top level production. */
  static final public List<IASTStatement> Input() throws ParseException {/*@bgen(jjtree) Input */
    SimpleNode jjtn000 = new SimpleNode(JJTINPUT);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);List<IASTStatement> result;
    try {
      result = Statements();
      jj_consume_token(0);
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
{if ("" != null) return result;}
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public IASTStatement Statement() throws ParseException {/*@bgen(jjtree) Statement */
    SimpleNode jjtn000 = new SimpleNode(JJTSTATEMENT);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);IASTStatement s;
    try {
      if (jj_2_1(2)) {
        s = Assignment();
        jj_consume_token(SEMI);
jjtree.closeNodeScope(jjtn000, true);
                                            jjtc000 = false;
{if ("" != null) return s;}
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case PRINT:{
          jj_consume_token(PRINT);
          s = Print();
          jj_consume_token(SEMI);
jjtree.closeNodeScope(jjtn000, true);
                                                      jjtc000 = false;
{if ("" != null) return s;}
          break;
          }
        case DO:{
          s = DoWhileLoop();
jjtree.closeNodeScope(jjtn000, true);
                                               jjtc000 = false;
{if ("" != null) return s;}
          break;
          }
        case FOR:{
          s = ForLoop();
jjtree.closeNodeScope(jjtn000, true);
                                             jjtc000 = false;
{if ("" != null) return s;}
          break;
          }
        case WHILE:{
          s = WhileLoop();
jjtree.closeNodeScope(jjtn000, true);
                                          jjtc000 = false;
{if ("" != null) return s;}
          break;
          }
        case IF:{
          s = If();
jjtree.closeNodeScope(jjtn000, true);
                                          jjtc000 = false;
{if ("" != null) return s;}
          break;
          }
        default:
          jj_la1[0] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public List<IASTStatement> Statements() throws ParseException {/*@bgen(jjtree) Statements */
    SimpleNode jjtn000 = new SimpleNode(JJTSTATEMENTS);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);IASTStatement s;
    LinkedList<IASTStatement> result = new LinkedList<IASTStatement>();
    try {
      label_1:
      while (true) {
        s = Statement();
result.add(s);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case WHILE:
        case IF:
        case FOR:
        case PRINT:
        case DO:
        case TYPE_INT:
        case TYPE_DOUBLE:
        case TYPE_BOOLEAN:
        case TYPE_ARRAY:
        case IDENTIFIER:{
          ;
          break;
          }
        default:
          jj_la1[1] = jj_gen;
          break label_1;
        }
      }
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
{if ("" != null) return result;}
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public While WhileLoop() throws ParseException {/*@bgen(jjtree) WhileLoop */
    SimpleNode jjtn000 = new SimpleNode(JJTWHILELOOP);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);List<IASTStatement> stmts;
    IASTExpr expr;
    try {
      jj_consume_token(WHILE);
      jj_consume_token(LPAREN);
      expr = Expression();
      jj_consume_token(RPAREN);
      jj_consume_token(LCURLY);
      stmts = Statements();
      jj_consume_token(RCURLY);
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
{if ("" != null) return new While(expr, stmts);}
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public For ForLoop() throws ParseException {/*@bgen(jjtree) ForLoop */
    SimpleNode jjtn000 = new SimpleNode(JJTFORLOOP);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);List<IASTStatement> stmts;
    IASTExpr expr;
    Token t;
    try {
      jj_consume_token(FOR);
      t = jj_consume_token(IDENTIFIER);
      jj_consume_token(IN);
      jj_consume_token(RANGE);
      expr = Expression();
      jj_consume_token(LCURLY);
      stmts = Statements();
      jj_consume_token(RCURLY);
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
{if ("" != null) return new For(new Identifier(t.image), expr, stmts);}
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public IASTStatement Print() throws ParseException {/*@bgen(jjtree) Print */
    SimpleNode jjtn000 = new SimpleNode(JJTPRINT);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);IASTExpr e;
    try {
      e = Expression();
jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
{if ("" != null) return new Print(e);}
    } catch (Throwable jjte000) {
if (jjtc000) {
             jjtree.clearNodeScope(jjtn000);
             jjtc000 = false;
           } else {
             jjtree.popNode();
           }
           if (jjte000 instanceof RuntimeException) {
             {if (true) throw (RuntimeException)jjte000;}
           }
           if (jjte000 instanceof ParseException) {
             {if (true) throw (ParseException)jjte000;}
           }
           {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
             jjtree.closeNodeScope(jjtn000, true);
           }
    }
    throw new Error("Missing return statement in function");
  }

  static final public IASTExpr Expression() throws ParseException {/*@bgen(jjtree) Expression */
    SimpleNode jjtn000 = new SimpleNode(JJTEXPRESSION);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);IASTExpr e;
    try {
      e = ConditionalExpression();
jjtree.closeNodeScope(jjtn000, true);
                                  jjtc000 = false;
{if ("" != null) return e;}
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public IASTExpr ConditionalExpression() throws ParseException {/*@bgen(jjtree) ConditionalExpression */
    SimpleNode jjtn000 = new SimpleNode(JJTCONDITIONALEXPRESSION);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);IASTExpr result, b;
    try {
      result = AdditiveExpression();
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case GREATER_THAN:
        case LESS_THAN:{
          ;
          break;
          }
        default:
          jj_la1[2] = jj_gen;
          break label_2;
        }
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case LESS_THAN:{
          jj_consume_token(LESS_THAN);
          b = AdditiveExpression();
result = new LessThan(result, b);
          break;
          }
        case GREATER_THAN:{
          jj_consume_token(GREATER_THAN);
          b = AdditiveExpression();
result = new GreaterThan(result, b);
          break;
          }
        default:
          jj_la1[3] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
{if ("" != null) return result;}
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public IASTExpr AdditiveExpression() throws ParseException {/*@bgen(jjtree) AdditiveExpression */
    SimpleNode jjtn000 = new SimpleNode(JJTADDITIVEEXPRESSION);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);IASTExpr result, b;
    try {
      result = MultiplicativeExpression();
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case PLUS:
        case SUB:{
          ;
          break;
          }
        default:
          jj_la1[4] = jj_gen;
          break label_3;
        }
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case PLUS:{
          jj_consume_token(PLUS);
          b = MultiplicativeExpression();
result = new Plus(result, b);
          break;
          }
        case SUB:{
          jj_consume_token(SUB);
          b = MultiplicativeExpression();
result = new Sub(result, b);
          break;
          }
        default:
          jj_la1[5] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
{if ("" != null) return result;}
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public IASTExpr MultiplicativeExpression() throws ParseException {/*@bgen(jjtree) MultiplicativeExpression */
    SimpleNode jjtn000 = new SimpleNode(JJTMULTIPLICATIVEEXPRESSION);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);IASTExpr result, b;
    try {
      result = ArrayIndexExpression();
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case MULT:
        case DIV:{
          ;
          break;
          }
        default:
          jj_la1[6] = jj_gen;
          break label_4;
        }
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case MULT:{
          jj_consume_token(MULT);
          b = ArrayIndexExpression();
result = new Mult(result, b);
          break;
          }
        case DIV:{
          jj_consume_token(DIV);
          b = ArrayIndexExpression();
result = new Div(result, b);
          break;
          }
        default:
          jj_la1[7] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
{if ("" != null) return result;}
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public IASTExpr ArrayIndexExpression() throws ParseException {/*@bgen(jjtree) ArrayIndexExpression */
    SimpleNode jjtn000 = new SimpleNode(JJTARRAYINDEXEXPRESSION);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);IASTExpr result;
    IASTExpr index;
    List<IASTExpr> indices = new LinkedList<IASTExpr>();
    try {
      result = AtomicExpression();
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case LBRACK:{
          ;
          break;
          }
        default:
          jj_la1[8] = jj_gen;
          break label_5;
        }
        jj_consume_token(LBRACK);
        index = Expression();
indices.add(index);
        jj_consume_token(RBRACK);
      }
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
if(indices.isEmpty())
        {
            {if ("" != null) return result;}
        }
        else
        {
            {if ("" != null) return new ArrayIndex(result, indices);}
        }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public IASTExpr AtomicExpression() throws ParseException {/*@bgen(jjtree) AtomicExpression */
    SimpleNode jjtn000 = new SimpleNode(JJTATOMICEXPRESSION);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);IASTExpr e;
    Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INTEGER_LITERAL:{
        t = jj_consume_token(INTEGER_LITERAL);
jjtree.closeNodeScope(jjtn000, true);
                                  jjtc000 = false;
{if ("" != null) return new Int(Integer.parseInt(t.image));}
        break;
        }
      case DOUBLE_LITERAL:{
        t = jj_consume_token(DOUBLE_LITERAL);
jjtree.closeNodeScope(jjtn000, true);
                                  jjtc000 = false;
{if ("" != null) return new Dble(Double.parseDouble(t.image));}
        break;
        }
      case IDENTIFIER:{
        t = jj_consume_token(IDENTIFIER);
jjtree.closeNodeScope(jjtn000, true);
                                  jjtc000 = false;
{if ("" != null) return new Identifier(t.image);}
        break;
        }
      case TRUE:{
        jj_consume_token(TRUE);
jjtree.closeNodeScope(jjtn000, true);
                                  jjtc000 = false;
{if ("" != null) return new Bool(true);}
        break;
        }
      case FALSE:{
        jj_consume_token(FALSE);
jjtree.closeNodeScope(jjtn000, true);
                                  jjtc000 = false;
{if ("" != null) return new Bool(false);}
        break;
        }
      case TYPE_INT:
      case TYPE_DOUBLE:
      case TYPE_BOOLEAN:
      case TYPE_ARRAY:{
        e = Array();
jjtree.closeNodeScope(jjtn000, true);
                                  jjtc000 = false;
{if ("" != null) return e;}
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  static final public IASTStatement Assignment() throws ParseException {/*@bgen(jjtree) Assignment */
    SimpleNode jjtn000 = new SimpleNode(JJTASSIGNMENT);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);Token t;
    IASTType x = null;
    List<IASTExpr> indices = new LinkedList <IASTExpr>();
    IASTExpr index;
    IASTExpr e = null;
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TYPE_INT:
      case TYPE_DOUBLE:
      case TYPE_BOOLEAN:
      case TYPE_ARRAY:{
        x = Type();
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        ;
      }
      t = jj_consume_token(IDENTIFIER);
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case LBRACK:{
          ;
          break;
          }
        default:
          jj_la1[11] = jj_gen;
          break label_6;
        }
        jj_consume_token(LBRACK);
        index = Expression();
        jj_consume_token(RBRACK);
indices.add(index);
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ASSIGN_EQUALS:{
        jj_consume_token(ASSIGN_EQUALS);
        e = Expression();
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        ;
      }
jjtree.closeNodeScope(jjtn000, true);
     jjtc000 = false;
if(x == null && e == null)
     {
        {if (true) throw new ParseException("You done goofed, GL");}
     }
     else if(x != null && e == null)
     {
        {if ("" != null) return new Declaration(x, new Identifier(t.image), indices);}
     }
     else if(x == null && e != null)
     {
        {if ("" != null) return new Assignment(new Identifier(t.image), e, indices);}
     }
     else
     {
        {if ("" != null) return new DeclareAssign(x, new Identifier(t.image), e, indices);}
     }
    } catch (Throwable jjte000) {
if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
    throw new Error("Missing return statement in function");
  }

  static final public IASTType Type() throws ParseException {/*@bgen(jjtree) Type */
    SimpleNode jjtn000 = new SimpleNode(JJTTYPE);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);IASTType t;
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TYPE_INT:
      case TYPE_DOUBLE:
      case TYPE_BOOLEAN:{
        t = AtomicType();
jjtree.closeNodeScope(jjtn000, true);
                                   jjtc000 = false;
{if ("" != null) return t;}
        break;
        }
      case TYPE_ARRAY:{
        jj_consume_token(TYPE_ARRAY);
        t = Type();
jjtree.closeNodeScope(jjtn000, true);
                                       jjtc000 = false;
{if ("" != null) return new TypeArray(t);}
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
                  jjtree.clearNodeScope(jjtn000);
                  jjtc000 = false;
                } else {
                  jjtree.popNode();
                }
                if (jjte000 instanceof RuntimeException) {
                  {if (true) throw (RuntimeException)jjte000;}
                }
                if (jjte000 instanceof ParseException) {
                  {if (true) throw (ParseException)jjte000;}
                }
                {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
                  jjtree.closeNodeScope(jjtn000, true);
                }
    }
    throw new Error("Missing return statement in function");
  }

  static final public IASTType AtomicType() throws ParseException {/*@bgen(jjtree) AtomicType */
  SimpleNode jjtn000 = new SimpleNode(JJTATOMICTYPE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TYPE_INT:{
        jj_consume_token(TYPE_INT);
jjtree.closeNodeScope(jjtn000, true);
                                    jjtc000 = false;
{if ("" != null) return TypeInt.INT;}
        break;
        }
      case TYPE_DOUBLE:{
        jj_consume_token(TYPE_DOUBLE);
jjtree.closeNodeScope(jjtn000, true);
                                    jjtc000 = false;
{if ("" != null) return TypeDouble.DOUBLE;}
        break;
        }
      case TYPE_BOOLEAN:{
        jj_consume_token(TYPE_BOOLEAN);
jjtree.closeNodeScope(jjtn000, true);
                                    jjtc000 = false;
{if ("" != null) return TypeBoolean.BOOLEAN;}
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
if (jjtc000) {
             jjtree.closeNodeScope(jjtn000, true);
           }
    }
    throw new Error("Missing return statement in function");
  }
